Guide: Increased responsive table iframe size to prevent scrollbar in Firefox

--- a/css/output/global.css
+++ b/css/output/global.css
@@ -623,7 +623,7 @@ font-family: "franklin-gothic-urw";
   outline: 0;
   border: 0;
   width: 30em;
-  height: 33em;
+  height: 35em;
   overflow: visible;
 }
 
