--- a/css/sass/_6-guide.scss
+++ b/css/sass/_6-guide.scss
@@ -75,7 +75,7 @@
   outline: 0;
   border: 0;
   width: 30em;
-  height: 33em;
+  height: 35em;
   overflow: visible;
 }
 
